{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 79,
  "lineage": "cbb453b7-9665-c6e8-9905-fb36db3a8de0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "backend_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.4.205",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-11-18T02:37:32.341-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/awesome-destiny-436710-j1/regions/europe-west1/addresses/backend-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "backend-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "awesome-destiny-436710-j1",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/regions/europe-west1/addresses/backend-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/zones/europe-west1-b/instances/backend-server"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "frontend_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.78.241.203",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-11-18T02:21:32.301-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/awesome-destiny-436710-j1/regions/europe-west1/addresses/frontend-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "frontend-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "awesome-destiny-436710-j1",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/regions/europe-west1/addresses/frontend-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/zones/europe-west1-b/instances/frontend-server"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-18T06:02:44.509-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/awesome-destiny-436710-j1/global/firewalls/allow-frontend-http",
            "log_config": [],
            "name": "allow-frontend-http",
            "network": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/global/networks/default",
            "priority": 1000,
            "project": "awesome-destiny-436710-j1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/global/firewalls/allow-frontend-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "frontend-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-14T06:05:46.907-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/awesome-destiny-436710-j1/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/global/networks/default",
            "priority": 1000,
            "project": "awesome-destiny-436710-j1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "backend-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_sql_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-14T06:05:46.403-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/awesome-destiny-436710-j1/global/firewalls/allow-sql-proxy",
            "log_config": [],
            "name": "allow-sql-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/global/networks/default",
            "priority": 1000,
            "project": "awesome-destiny-436710-j1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/global/firewalls/allow-sql-proxy",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "backend-server"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "backend-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241112",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/zones/europe-west1-b/disks/backend-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-20T00:35:12.452-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/awesome-destiny-436710-j1/zones/europe-west1-b/instances/backend-server",
            "instance_id": "6404988743413932496",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "bDBlEvbsq00=",
            "metadata_startup_script": "#!/bin/bash\n\n# Define repository and backend details\nPARENT_DIR=\"/home/ubuntu\"\nREPO_NAME=\"Cloud-portifolio\"\nREPO_DIR=\"$PARENT_DIR/$REPO_NAME/src/main/backend\"\nGIT_URL=\"https://github.com/Mohamed3873/Cloud-portifolio.git\"\n\n# Update package list and install required tools\nfor attempt in {1..3}; do\n    sudo apt update \u0026\u0026 sudo apt install -y python3 python3-pip python3-venv git curl mariadb-client libmariadb-dev\n    if [ $? -eq 0 ] [...]
            "name": "backend-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.4.205",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/global/networks/default",
                "network_ip": "10.132.0.27",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "awesome-destiny-436710-j1"
              }
            ],
            "project": "awesome-destiny-436710-j1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/zones/europe-west1-b/instances/backend-server",
            "service_account": [
              {
                "email": "test-495@awesome-destiny-436710-j1.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend-server"
            ],
            "tags_fingerprint": "MK3rVqG9aAQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.backend_static_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "frontend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241112",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/zones/europe-west1-b/disks/frontend-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-20T02:33:46.146-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/awesome-destiny-436710-j1/zones/europe-west1-b/instances/frontend-server",
            "instance_id": "3400133355735352806",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "V1Fh3k8r7ZY=",
            "metadata_startup_script": "#!/bin/bash\n\n# Install git if not already installed\nif ! command -v git \u0026\u003e /dev/null; then\n    echo \"Git not found. Installing Git...\"\n    sudo apt update\n    sudo apt install -y git\nelse\n    echo \"Git is already installed.\"\nfi\n\n# Directory where the repository will be cloned\nREPO_DIR=\"/var/www/html/frontend\"\nGIT_URL=\"https://github.com/Mohamed3873/Cloud-portifolio.git\"\n\n# Check if the repository directory exists\nif [ -d \ [...]
            "name": "frontend-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.78.241.203",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/global/networks/default",
                "network_ip": "10.132.0.33",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "awesome-destiny-436710-j1"
              }
            ],
            "project": "awesome-destiny-436710-j1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/awesome-destiny-436710-j1/zones/europe-west1-b/instances/frontend-server",
            "service_account": [
              {
                "email": "test-495@awesome-destiny-436710-j1.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "frontend-server"
            ],
            "tags_fingerprint": "vP5TjcmtPN8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.frontend_static_ip"
          ]
        }
      ]
    }
  ]
}